
[Test_FullWorkflow_Create_S3_ENV_Simple - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/dotenv/encrypted-best-secret.env"
}
---

[Test_FullWorkflow_Create_S3_ENV_Simple - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
main.putSecretValueInputNotSecure{
    _:                  struct {}{},
    ClientRequestToken: &"../test-secrets/dotenv/encrypted-best-secret",
    RotationToken:      (*string)(nil),
    SecretBinary:       nil,
    SecretId:           &"arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
    SecretString:       &"banane=yellow\ncrypt=\"ajkscbuiuXA34%%&&=\n",
    VersionStages:      nil,
}
---

[Test_FullWorkflow_Create_S3_ENV_Simple - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "6e5c42133fbe7c37503ffbd8e2c4dd792b6800a7aa022e5ee9d70892c3be4205",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---

[Test_FullWorkflow_Create_S3_ENV_as_JSON_Simple - 1]
>>>S3MAnagerMockClient.Download.Input
{
  Bucket: "..",
  Key: "../test-secrets/dotenv/encrypted-best-secret.env"
}
---

[Test_FullWorkflow_Create_S3_ENV_as_JSON_Simple - 2]
>>>SecretsManagerMockClient.PutSecretValue.Input
main.putSecretValueInputNotSecure{
    _:                  struct {}{},
    ClientRequestToken: &"../test-secrets/dotenv/encrypted-best-secret",
    RotationToken:      (*string)(nil),
    SecretBinary:       nil,
    SecretId:           &"arn:aws:secretsmanager:eu-central-1:123456789012:secret:testsecret",
    SecretString:       &"{\n  \"banane\": \"yellow\",\n  \"crypt\": \"\\\"ajkscbuiuXA34%%\\u0026\\u0026=\"\n}",
    VersionStages:      nil,
}
---

[Test_FullWorkflow_Create_S3_ENV_as_JSON_Simple - 3]
>>>syncSopsToSecretsmanager
arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret
map[string]interface {}{
    "ARN":           "arn:custom:sopssync:eu-central-1:123456789012:secret:testsecret",
    "Name":          "dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    "VersionId":     "853112768310b655f423f8e8338d83ca124ddfa16d70f60f0b82aeb3861744c5",
    "VersionStages": []*string{
        &"dfb70680d326c245dbdd113d635caa16113e78b1eb8b7447f10eeb861e491724",
    },
}
nil
---
